App manager code from subproject transferred to this repository

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,11 @@ dist
 
 # TernJS port file
 .tern-port
+
+# Yarn not using Zero-Installs see https://next.yarnpkg.com/advanced/qa#which-files-should-be-gitignored
+.yarn/*
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
