--- a/backend/package.json
+++ b/backend/package.json
@@ -46,7 +46,8 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.1.0",
     "source-map-support": "^0.5.19",
-    "yaml": "^1.10.2"
+    "yaml": "^1.10.2",
+    "yargs": "^17.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.6.0",
@@ -57,6 +58,7 @@
     "@types/lodash": "^4.14.170",
     "@types/node": "^15.12.1",
     "@types/supertest": "^2.0.11",
+    "@types/yargs": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
     "eslint": "^7.28.0",
