--- a/backend/package.json
+++ b/backend/package.json
@@ -27,11 +27,11 @@
   },
   "dependencies": {
     "@artcodestudio/redbird": "workspace:*",
-    "@nestjs/common": "^8.0.4",
+    "@nestjs/common": "^8.0.6",
     "@nestjs/config": "^1.0.1",
-    "@nestjs/core": "^8.0.4",
-    "@nestjs/platform-express": "^8.0.4",
-    "@root/keypairs": "^0.10.1",
+    "@nestjs/core": "^8.0.6",
+    "@nestjs/platform-express": "^8.0.6",
+    "@root/keypairs": "^0.10.3",
     "@types/app-root-path": "^1.2.4",
     "@types/glob": "^7.1.4",
     "@types/yaml": "^1.9.7",
@@ -40,38 +40,39 @@
     "dotenv": "^10.0.0",
     "get-port": "^5.1.1",
     "glob": "^7.1.7",
+    "greenlock-store-fs": "^3.2.2",
     "lodash": "^4.17.21",
-    "pm2": "^5.1.0",
+    "pm2": "^5.1.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
-    "source-map-support": "^0.5.19",
+    "rxjs": "^7.3.0",
+    "source-map-support": "^0.5.20",
     "yaml": "^1.10.2",
-    "yargs": "^17.0.1"
+    "yargs": "^17.1.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.0.2",
-    "@nestjs/schematics": "^8.0.2",
-    "@nestjs/testing": "^8.0.4",
+    "@nestjs/cli": "^8.1.1",
+    "@nestjs/schematics": "^8.0.3",
+    "@nestjs/testing": "^8.0.6",
     "@types/express": "^4.17.13",
-    "@types/jest": "^26.0.24",
-    "@types/lodash": "^4.14.171",
-    "@types/node": "^16.4.1",
+    "@types/jest": "^27.0.2",
+    "@types/lodash": "^4.14.173",
+    "@types/node": "^16.9.6",
     "@types/supertest": "^2.0.11",
-    "@types/yargs": "^17.0.2",
-    "@typescript-eslint/eslint-plugin": "^4.28.4",
-    "@typescript-eslint/parser": "^4.28.4",
-    "eslint": "^7.31.0",
+    "@types/yargs": "^17.0.3",
+    "@typescript-eslint/eslint-plugin": "^4.31.2",
+    "@typescript-eslint/parser": "^4.31.2",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "jest": "^27.0.6",
-    "prettier": "^2.3.2",
-    "supertest": "^6.1.4",
-    "ts-jest": "^27.0.4",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.1.0",
-    "tsconfig-paths": "^3.10.1",
-    "typescript": "^4.3.5"
+    "eslint-plugin-prettier": "^3.4.1",
+    "jest": "^27.2.1",
+    "prettier": "^2.4.1",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.0.5",
+    "ts-loader": "^9.2.6",
+    "ts-node": "^10.2.1",
+    "tsconfig-paths": "^3.11.0",
+    "typescript": "^4.4.3"
   },
   "jest": {
     "moduleFileExtensions": [
