--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "!packages/riba/infra/schematics"
   ],
   "dependencies": {
-    "@ribajs/eslint-config": "workspace:packages/riba/infra/eslint-config",
+    "@ribajs/eslint-config": "workspace:*",
     "@types/node": "^15.12.2",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/experimental-utils": "^4.26.1",
